# Santised-code

./: .gitignore  AWS_DEPLOYMENT_README.md  Dockerfile  Makefile  README.md  aws_deployment_guide.md  aws_production_best_practices.md  check_n8n_compatibility.sh  deploy_to_aws.sh  docker-compose.yml  n8n_integration_guide.md  pyproject.toml  requirements.txt  run.py
api/: __init__.py  main.py
data_io/: __init__.py  csv_store.py
deployment/: .env.example  README.md  docker-compose.yml
deployment/backend/: Dockerfile  requirements.txt
deployment/data/: battery_specs.csv  charging_stations.csv  generator_data.csv  systembatteries.csv  systemchargingstations.csv  systemefuelcapacity.csv  systemgasdemands.csv  systemgasfields.csv  systemgasnodes.csv  systemgaspipelines.csv  systemgasplants.csv  systemgasstorages.csv  systemgenerators.csv  systemh2capacity.csv  systemh2production.csv  systemheatnodes.csv  systemheatplants.csv  systemlines.csv  systemnodes.csv  systempower2x.csv  systempowerflex.csv  systemregions.csv  systemvehicles.csv
engine/: pipeline.py  pipeline_enhanced.py  pipeline_enhanced_v2.py
examples/: full_pipeline_test.py  simple_llm_test.py  simple_parse.py  test_llm_params.py
io/: csv_store.py
nfg_math/: __init__.py  equations.py
semantic/: intent_parser.py  llm_provider.py  llm_provider.py.new  llm_provider_enhanced.py  model_config.py  variable_catalog.py
tools/: check_dates.py  check_imports.py  check_token_limits.py  debug_csv_data.py  fix_all_issues.py  fix_intent_parsing.py
utils/: __init__.py  metrics.py
(+16 files in other folders)
